src/shared/components/search/search.css
/**
 * Modifiers
 */

.hw-search {
  position: relative;
  width: 100%;
  transition: width 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275), background 1000ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
  display: flex;
  /**
   * Elements
   */

  &__inner {
    position: relative;
    background: rgba(255, 255, 255, 0.95);
    overflow: hidden;
    z-index: 1;
    width: 100%;
  }

  &__input, &__placeholder {
    font-size: var(--hw-font-size-p);
    padding: var(--hw-spacing-smallest) var(--hw-spacing-large);
    @media (--large) {
      padding: 24px 60px;
    }
  }

  &__input {
    margin: 0;
    width: 100%;
    transition: outline 100ms;
    border: 3px solid var(--hw-color-gray-light);
    border-radius: 0px;
    height: auto;
    &:hover {
      border-color: var(--hw-color-gray);
    }
    &:focus {
      border-color: var(--hw-color-gray-darker);
      outline-width: 0;
      background-color: var(--hw-color-white);
    }
    @media (--large){
      height: var(--hw-navbar-height-desktop);
      border: 0;
    }
  }

  &__placeholder {
    position: absolute;
    top: 0;
    left: 0;
    color: var(--hw-color-gray-dark);
    animation: movePlaceholder 3s ease-out infinite 0.3s;
    z-index: -1;
    border: 3px solid transparent;
    @media (--large){
      border: 0;
    }
  }

  &__icon {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 1em;
    left: var(--hw-spacing-smaller);
    @media (--large) {
      font-size: 1.5em;
      left: var(--hw-spacing-small);
    }
  }

  &__button {
    margin-top: 0;
    padding-top: initial;
    padding-bottom: initial;
    margin-left: var(--hw-spacing-smallest);
  }

  &__button-inside {
    position: absolute;
    right: var(--hw-spacing-small);
    top: 50%;
    transform: translateY(-50%);
    border: 0;
    opacity: 0;
    transition: opacity 0.1s ease, visibility 0.1s ease 0.11s;
    color: var(--hw-color-gray-light);
    visibility: hidden;
  }

  &__button-inside:hover,
  &__button-inside:focus {
    color: var(--hw-color-gray); 
  }

  &__suggestions {
    position: absolute;
    top: 41px;
    margin: 0;
    list-style-type: none;
    padding-left: 0;
    width: 100%;
    background-color: var(--hw-color-gray-lighter);
    left: 0;
    right: 0;
    @media (--large){
      top: calc(var(--hw-navbar-height-desktop) + 2);
      background-color: var(--hw-color-white);
    }
  }

  &__suggestion {
    &:not(:first-of-type) .hw-search__suggestion-link .hw-search__suggestion-title {
      border-top: 3px solid var(--hw-color-gray-lightest);
    }
    &:last-of-type .hw-search__suggestion-link {
      padding-bottom: var(--hw-spacing-smaller);
    }
    &:not(:last-of-type) .hw-search__suggestion-link:hover, &:not(:last-of-type) .hw-search__suggestion-link:focus {
      box-shadow: 0 3px var(--hw-color-gray-lightest);
    }
  }

  &__suggestion-link {
    display: inline-block;
    width: 100%;
    &:hover, &:focus {
      color: var(--hw-color-gray-darkest);
      background-color: var(--hw-color-gray-lightest);
      & .hw-search__suggestion-extra {
        color: var(--hw-color-gray-darkest);
      }
    }
    @media (--large){
      padding-left: var(--hw-spacing);
    }
  }

  &__suggestion-title {
    padding-top: var(--hw-spacing-smallest);
    line-height: 1.2;
  }

  &__suggestion-extra {
    font-size: var(--hw-font-size-small);
    padding-bottom: var(--hw-spacing-smallest);
    color: var(--hw-color-link);
  }



  /**
   * Modifers
   */

  /** Modifiers added by javascript **/
  &--static .hw-search__placeholder {
    animation: none;
  }

  &--active .hw-search__placeholder, &--dirty .hw-search__placeholder {
    visibility: hidden;
  }

  &--hasvalue .hw-search__button-inside {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.1s ease;
  }

  /** Manual modifiers **/
  &--standalone {

    & .hw-search__icon {
      font-size: 1em;
      left: var(--hw-spacing-smaller);
    }

    & .hw-search__input {
      border: 3px solid var(--hw-color-gray-light);
      padding: var(--hw-spacing-smallest) var(--hw-spacing-large);
      height: auto;
      font-size: var(--hw-font-size-p);
    }

    & .hw-search__input:hover {
      border-color: var(--hw-color-gray);
    }

    & .hw-search__input:focus {
      border-color: var(--hw-color-gray-darker);
      outline: 0;
    }

    & .hw-search__placeholder {
      padding: var(--hw-spacing-smallest) var(--hw-spacing-large);
      border: 3px solid transparent;
      font-size: var(--hw-font-size-p);
    }
  }

  &__suggestions--simple &__suggestion-title {
    color: var(--hw-color-link);
    padding-top: var(--hw-spacing-smaller);
    padding-bottom: var(--hw-spacing-smaller);
  }

  &__suggestions--simple &__suggestion-title:hover {
    color: var(--hw-color-link-hover);
  }
  
}

/**
 * Animations
 */

@keyframes movePlaceholder {
  0% {
    transform: translateY(0);
    opacity: 1;
  }

  75% {
    transform: translateY(0);
    opacity: 1;
  }

  90% {
    transform: translateY(-50px);
    opacity: 0;
  }

  91% {
    transform: translateY(50px);
  }

  92% {
    transform: translateY(50px);
    opacity: 0;
  }
}

